= Changelog

== HEAD

* Hip new name. My agent said <tt>Dryopteris</tt> would never sell out the Copa.
* Swank new API. Check out my rdocs.
* Reimplemented to use Nokogiri's <tt>Document</tt> and <tt>DocumentFragment</tt> for parsing.
* Updated HTML5lib codes and tests to revision 1384:b9d3153d7be7.

== 0.1.2 (2009-04-30)

* Added whitewashing -- removal of all attributes and namespaced nodes. You know, for microsofty HTML.

== 0.1.0 (2009-02-10)

* Birthday!