@@ -12,9 +12,9 @@ the markup for storage or display.
 It's built on top of Nokogiri[http://nokogiri.org] and
 libxml2[http://xmlsoft.org/], so it's fast. And it uses
 html5lib's[http://code.google.com/p/html5lib/] whitelist, so it most
-likely won't make your codes less secure.<super>*</super>
+likely won't make your codes less secure.<sup>*</sup>
 
-<small><super>*</super> These statements have not been evaluated by
+<small><sup>*</sup> These statements have not been evaluated by
 Internet Experts.</small>
 
 == FEATURES
@@ -25,21 +25,24 @@ Internet Experts.</small>
 * Whitewash the markup, removing all attributes and namespaced nodes.
 * Format the markup as plain text.
 * Rails ActiveRecord extension.
+* 99 <sup>44</sup>\&frasl;<sub>100</sub>% Tenderlove-free
 
 == SYNOPSIS
 
-For a full explanation, see the rdocs for Loofah.
+For a full explanation, see the documentation for Loofah.
 
   require 'loofah'
 
   unsafe_html = "ohai! <div>a div is safe</div> <script>but script is not</script>"
 
-  doc = Loofah.fragment(unsafe_html)
-  
-  doc.scrub!(:prune)  # removes unknown/unsafe tags and their children
+  Loofah.scrub_fragment(unsafe_html, :prune).to_s  # => "ohai! <div>div is safe</div> "
 
-  doc.to_s            # => "ohai! <div>div is safe</div> "
-  doc.text            # => "ohai! div is safe "
+OR
+
+  doc = Loofah.fragment(unsafe_html)  # returns a Nokogiri document ...
+  doc.scrub!(:prune)                  # ... with one extra method
+  doc.to_s                            # => "ohai! <div>div is safe</div> "
+  doc.text                            # => "ohai! div is safe "
 
 == REQUIREMENTS
 
@@ -48,12 +51,22 @@ For a full explanation, see the rdocs for Loofah.
 
 == INSTALLATION
 
+Unsurprisingly:
+
 * gem install loofah
 
 == AUTHORS
 
 * {Mike Dalessio}[mailto:mike.dalessio@gmail.com]
 * {Bryan Helmkamp}[mailto:bryan@brynary.com]
+
+Featuring code contributed by:
+
+* Aaron Patterson
+* John Barnette
+* Josh Owens
+* Paul Dix
+
 
 == LICENSE
 
